<resources>
    <string name="app_name">随访病人端</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="username">姓名</string>
    <string name="symptom">症状:</string>
    <string name="diagnose">诊断:</string>
    <string name="paroxysm">发病:</string>

    <string name="action_settings">Settings</string>
    <string name="agree">接受</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="new_friend">新的朋友</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="add_avator">头像</string>
    <string name="add_name">账号</string>
    <string name="add_friend">添加好友</string>
    <string name="chat">聊天</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>
    <string name="questionaire">问卷</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
</resources>