<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_gravatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                android:scaleType="centerInside"
                android:src="@drawable/head" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="top"
                android:layout_marginTop="55dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_patientName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="name"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/mainTextsize"
                    />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="gender"
                    android:textColor="#D2691E"
                    android:textSize="@dimen/mainTextsize" />

                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="age"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/mainTextsize" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_bingliFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="已读"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/mainTextsize" />


                    <ImageView
                        android:id="@+id/iv_readFlagImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/hadread"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>



            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/mainTextsize"
                    android:text="@string/symptom"/>

                <TextView
                    android:id="@+id/tv_zhengzhuang"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="TextView1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/mainTextsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/mainTextsize"
                    android:text="@string/diagnose"/>
                <TextView
                    android:id="@+id/tv_zhengduan"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/mainTextsize"
                    android:text="TextView2"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/mainTextsize"
                    android:text="@string/paroxysm"/>
                <TextView
                    android:id="@+id/tv_fabing"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/mainTextsize"
                    android:text="TextView3"
                    android:textColor="@android:color/black"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/split"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:alpha=".5"
            android:orientation="horizontal"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_date"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:layout_width="150dp"
                android:textSize="16sp"
                android:text="2017-01-01"
                android:layout_height="match_parent" />
            <!--<TextView-->
                <!--android:gravity="center"-->
                <!--android:layout_width="60dp"-->
                <!--android:textSize="16sp"-->
                <!--android:text="12:00"-->
                <!--android:layout_height="match_parent" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                >
                <TextView
                    android:id="@+id/tv_huizhen"
                    android:gravity="center"
                    android:text="会诊"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:layout_width="60dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_pinglun"
                    android:gravity="center"
                    android:text="评论"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:layout_width="60dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
